docs：write sqlite design

--- a/docs/数据库设计文档.md
+++ b/docs/数据库设计文档.md
@@ -54,8 +54,8 @@ https://www.bilibili.com/video/av75498379
 
 | 字段      | 类型         | 空   | 默认 | 注释                            |
 | --------- | ------------ | ---- | ---- | ------------------------------- |
-| id        | bigint(20)   | 否   |      | 菜单ID                          |
-| parentId  | bigint(20)   |      |      | 父菜单ID                        |
+| id        | bigint(20)   | 否   |      | ID                              |
+| parent_id | bigint(20)   |      |      | 父菜单ID                        |
 | name      | varchar(255) | 否   |      | 菜单名称                        |
 | router    | varchar(255) |      |      | 菜单地址                        |
 | perms     | varchar(255) |      |      | 权限标识                        |
@@ -72,15 +72,47 @@ https://www.bilibili.com/video/av75498379
 | ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
 | PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
 
+## sys_department
+
+**表注释：系统部门**
+
+| 字段      | 类型         | 空   | 默认 | 注释       |
+| --------- | ------------ | ---- | ---- | ---------- |
+| id        | bigint(20)   | 否   |      | ID         |
+| parent_id | bigint(20)   |      |      | 上级部门ID |
+| name      | varchar(255) | 否   |      | 部门名称   |
+| order_num | int(11)      |      | 0    | 排序       |
+
+**索引**
+
+| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数 | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
+
 ## sys_user
 
 **表注释：系统用户**
 
-| 字段          | 类型       | 空   | 默认 | 注释     |
-| ------------- | ---------- | ---- | ---- | -------- |
-| id            | bigint(20) | 否   |      | 用户ID   |
-| department_id | bigint(20) | 否   |      | 部门编号 |
-|               |            |      |      |          |
+| 字段          | 类型         | 空   | 默认 | 注释                   |
+| ------------- | ------------ | ---- | ---- | ---------------------- |
+| id            | bigint(20)   | 否   |      | ID                     |
+| department_id | bigint(20)   | 否   |      | 部门编号               |
+| name          | varchar(255) | 否   |      | 姓名                   |
+| username      | varchar(255) | 否   |      | 登录账号               |
+| password      | varchar(255) | 否   |      | 密码                   |
+| nick_name     | varchar(255) |      |      | 昵称                   |
+| head_img      | varchar(255) |      |      | 头像                   |
+| email         | varchar(255) |      |      | 邮箱                   |
+| phone         | varchar(20)  |      |      | 手机号                 |
+| remark        | varchar(255) |      |      | 备注                   |
+| status        | tinyint(4)   |      | 1    | 状态：0：禁用，1：启用 |
+
+**索引**
+
+| 键名    | 类型  | 唯一 | 紧凑 | 字段     | 基数 | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | -------- | ---- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id       | 0    | A        | 否   |      |
+| UNIQUE  | BTREE | 是   | 否   | username |      |          | 否   |      |
 
 ## sys_role
 
@@ -88,7 +120,7 @@ https://www.bilibili.com/video/av75498379
 
 | 字段    | 类型         | 空   | 默认 | 注释   |
 | ------- | ------------ | ---- | ---- | ------ |
-| id      | bigint(20)   | 否   |      | 角色ID |
+| id      | bigint(20)   | 否   |      | ID     |
 | user_id | varchar(255) | 否   |      | 创建人 |
 | name    | varchar(255) | 否   |      | 名称   |
 | label   | varchar(50)  | 否   |      | 标签   |
@@ -102,3 +134,68 @@ https://www.bilibili.com/video/av75498379
 | UNIQUE  | BTREE | 是   | 否   | label |      | A        | 否   |      |
 | UNIQUE  | BTREE | 是   | 否   | name  |      | A        | 否   |      |
 
+## sys_role_department
+
+**表注释：系统角色部门关系**
+
+| 字段          | 类型       | 空   | 默认 | 注释   |
+| ------------- | ---------- | ---- | ---- | ------ |
+| id            | bigint(20) | 否   |      | ID     |
+| role_id       | bigint(20) | 否   |      | 角色ID |
+| department_id | bigint(20) | 否   |      | 部门ID |
+
+**索引**
+
+| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数 | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
+
+## sys_role_menu
+
+**表注释：系统角色菜单关系**
+
+| 字段    | 类型       | 空   | 默认 | 注释   |
+| ------- | ---------- | ---- | ---- | ------ |
+| id      | bigint(20) | 否   |      | ID     |
+| role_id | bigint(20) | 否   |      | 角色ID |
+| menu_id | bigint(20) | 否   |      | 菜单ID |
+
+**索引**
+
+| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数 | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
+
+## sys_user_role
+
+**表注释：系统用户角色关系**
+
+| 字段    | 类型       | 空   | 默认 | 注释   |
+| ------- | ---------- | ---- | ---- | ------ |
+| id      | bigint(20) | 否   |      | ID     |
+| user_id | bigint(20) | 否   |      | 用户ID |
+| role_id | bigint(20) | 否   |      | 角色ID |
+
+**索引**
+
+| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数 | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
+
+## sys_log
+
+**表注释：系统操作日志**
+
+| 字段    | 类型         | 空   | 默认 | 注释 |
+| ------- | ------------ | ---- | ---- | ---- |
+| id      | bigint(20)   | 否   |      | ID   |
+| ip      | varchar(255) |      |      |      |
+| user_id | bigint(20)   |      |      |      |
+| params  | varchar(255) |      |      | 参数 |
+| action  | varchar(100) |      |      | 行为 |
+
+**索引**
+
+| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数 | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
