docs：更新数据库设计文档

--- a/docs/数据库设计文档.md
+++ b/docs/数据库设计文档.md
@@ -186,6 +186,7 @@ https://www.bilibili.com/video/av75498379
 | 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数 | 排序规则 | 空   | 注释 |
 | ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
 | PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
+| UNIQUE  | BTREE | 是   | 否   | name |      |          | 否   |      |
 
 ## image_space_info
 
