docs：曾会员表、物品表等文档

--- a/docs/分享平台数据库设计文档.md
+++ b/docs/分享平台数据库设计文档.md
@@ -1,10 +1,8 @@
 # 文档修订记录
 
-| 日期       | 版本   | 说明 | 作者   |
-| :--------- | :----- | :--- | :----- |
-| 2020-08-21 | v1.0.0 | 创建 | 杨长源 |
-
-
+| 日期       | 版本   | 说明 | 作者    |
+| :--------- | :----- | :--- | :------ |
+| 2020-10-05 | v1.0.0 | 创建 | hackycy |
 
 # 参考文献
 
@@ -20,18 +18,76 @@ https://www.bilibili.com/video/av75498379
 # 数据模型实体属性
 
 
-## member
+## share_member
 
 **表注释：会员表**
+
+| 字段     | 类型         | 空   | 默认 | 注释           |
+| -------- | ------------ | ---- | ---- | -------------- |
+| id       | bigint(20)   | 否   |      | ID             |
+| username | varchar(16)  | 否   |      | 会员账号       |
+| password | varchar(500) | 否   |      | 会员密码       |
+| email    | varchar(100) | 否   |      | 会员绑定邮箱   |
+| phone    | varchar(11)  | 是   |      | 会员绑定手机号 |
+| coin     | int(20)      | 是   | 0    | 会员积分       |
+
+**索引**
+
+| 键名    | 类型  | 唯一 | 紧凑 | 字段     | 基数  | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | -------- | ----- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id       | 10000 | A        | 否   |      |
+| UNIQUE  | BTREE | 是   | 否   | username |       | A        | 否   |      |
+| UNIQUE  | BTREE | 是   | 否   | email    |       | A        | 否   |      |
+
+## share_goods
+
+**表注释：物品表**
+
+| 字段    | 类型        | 空   | 默认 | 注释                       |
+| ------- | ----------- | ---- | ---- | -------------------------- |
+| id      | bigint(20)  | 否   |      | ID                         |
+| cid     | bigint(20)  | 否   |      | 分类ID                     |
+| title   | varchar(30) | 否   |      | 物品标题                   |
+| intro   | text        | 是   |      | 物品介绍，富文本           |
+| tag     | varchat(20) | 是   |      | 物品标签，多个标签用，分隔 |
+| ex_coin | int         | 是   | 0    | 物品兑换所需积分           |
+
+**索引**
+
+| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数  | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | ---- | ----- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id   | 10000 | A        | 否   |      |
+
+## share_goods_category
+
+**表注释：物品分类表**
 
 | 字段 | 类型        | 空   | 默认 | 注释     |
 | ---- | ----------- | ---- | ---- | -------- |
 | id   | bigint(20)  | 否   |      | ID       |
-| name | varchar(50) | 否   |      | 类别名称 |
+| name | varchar(10) | 否   |      | 分类名称 |
 
 **索引**
 
-| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数 | 排序规则 | 空   | 注释 |
-| ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
-| PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
-| UNIQUE  | BTREE | 是   | 否   | name |      |          | 否   |      |
+| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数  | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | ---- | ----- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id   | 10000 | A        | 否   |      |
+| UNIQUE  | BTREE | 是   | 否   | name |       | A        | 否   |      |
+
+## share_exchange
+
+**表注释：会员兑换记录表**
+
+| 字段  | 类型       | 空   | 默认 | 注释           |
+| ----- | ---------- | ---- | ---- | -------------- |
+| id    | bigint(20) | 否   |      | ID             |
+| mid   | bigint(20) | 否   |      | 会员ID         |
+| gid   | bigint(20) | 否   |      | 物品ID         |
+| bcoin | int        | 否   |      | 会员兑换前积分 |
+| acoin | int        | 否   |      | 会员兑换后积分 |
+
+**索引**
+
+| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数  | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | ---- | ----- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id   | 10000 | A        | 否   |      |
