docs：物品分类表增加mark分类表示列

--- a/docs/分享平台数据库设计文档.md
+++ b/docs/分享平台数据库设计文档.md
@@ -66,13 +66,15 @@ https://www.bilibili.com/video/av75498379
 | ---- | ----------- | ---- | ---- | -------- |
 | id   | bigint(20)  | 否   |      | ID       |
 | name | varchar(10) | 否   |      | 分类名称 |
+| mark | varchar(50) | 否   |      | 分类标记 |
 
 **索引**
 
-| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数  | 排序规则 | 空   | 注释 |
-| ------- | ----- | ---- | ---- | ---- | ----- | -------- | ---- | ---- |
-| PRIMARY | BTREE | 是   | 否   | id   | 10000 | A        | 否   |      |
-| UNIQUE  | BTREE | 是   | 否   | name |       | A        | 否   |      |
+| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数 | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
+| UNIQUE  | BTREE | 是   | 否   | name |      | A        | 否   |      |
+| UNIQUE  | BTREE | 是   | 否   | mark |      | A        | 否   |      |
 
 ## share_exchange
 
