docs：物品表增加show以及status列

--- a/docs/分享平台数据库设计文档.md
+++ b/docs/分享平台数据库设计文档.md
@@ -28,8 +28,8 @@ https://www.bilibili.com/video/av75498379
 | username | varchar(16)  | 否   |      | 会员账号       |
 | password | varchar(500) | 否   |      | 会员密码       |
 | email    | varchar(100) | 否   |      | 会员绑定邮箱   |
-| phone    | varchar(11)  | 是   |      | 会员绑定手机号 |
-| coin     | int(20)      | 是   | 0    | 会员积分       |
+| phone    | varchar(11)  |      |      | 会员绑定手机号 |
+| coin     | int(20)      |      | 0    | 会员积分       |
 
 **索引**
 
@@ -43,14 +43,16 @@ https://www.bilibili.com/video/av75498379
 
 **表注释：物品表**
 
-| 字段    | 类型        | 空   | 默认 | 注释                       |
-| ------- | ----------- | ---- | ---- | -------------------------- |
-| id      | bigint(20)  | 否   |      | ID                         |
-| cid     | bigint(20)  | 否   |      | 分类ID                     |
-| title   | varchar(30) | 否   |      | 物品标题                   |
-| intro   | text        | 是   |      | 物品介绍，富文本           |
-| tag     | varchat(20) | 是   |      | 物品标签，多个标签用，分隔 |
-| ex_coin | int         | 是   | 0    | 物品兑换所需积分           |
+| 字段    | 类型        | 空   | 默认 | 注释                                                  |
+| ------- | ----------- | ---- | ---- | ----------------------------------------------------- |
+| id      | bigint(20)  | 否   |      | ID                                                    |
+| cid     | bigint(20)  | 否   |      | 所属分类ID                                            |
+| title   | varchar(30) | 否   |      | 物品标题                                              |
+| intro   | text        |      |      | 物品介绍，富文本                                      |
+| tag     | varchat(20) |      |      | 物品标签，多个标签用，分隔，注意不要太多标签,三个以下 |
+| ex_coin | int         |      | 0    | 物品兑换所需积分                                      |
+| show    | tinyint(1)  |      | 1    | 0代表false，1代表true，真则显示                       |
+| status  | tinyint(4)  |      | 1    | 0代表关闭兑换，1代表开启兑换                          |
 
 **索引**
 
