feat：请求追踪表增加method列

--- a/docs/权限管理数据库设计文档.md
+++ b/docs/权限管理数据库设计文档.md
@@ -154,17 +154,18 @@ https://www.bilibili.com/video/av75498379
 | ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
 | PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
 
-## sys_log
+## sys_req_log
 
-**表注释：系统操作日志**
+**表注释：请求追踪日志表**
 
-| 字段    | 类型         | 空   | 默认 | 注释 |
-| ------- | ------------ | ---- | ---- | ---- |
-| id      | bigint(20)   | 否   |      | ID   |
-| ip      | varchar(255) |      |      |      |
-| user_id | bigint(20)   |      |      |      |
-| params  | varchar(255) |      |      | 参数 |
-| action  | varchar(100) |      |      | 行为 |
+| 字段    | 类型         | 空   | 默认 | 注释                    |
+| ------- | ------------ | ---- | ---- | ----------------------- |
+| id      | bigint(20)   | 否   |      | ID                      |
+| ip      | varchar(255) |      |      |                         |
+| user_id | bigint(20)   |      |      |                         |
+| params  | varchar(255) |      |      | 参数                    |
+| action  | varchar(100) |      |      | 行为                    |
+| method  | varchar(15)  |      |      | 请求方式，同http method |
 
 **索引**
 
