--- a/docs/权限管理数据库设计文档.md
+++ b/docs/权限管理数据库设计文档.md
@@ -166,6 +166,7 @@ https://www.bilibili.com/video/av75498379
 | params  | varchar(255) |      |      | 参数                    |
 | action  | varchar(100) |      |      | 行为                    |
 | method  | varchar(15)  |      |      | 请求方式，同http method |
+| status  | int          |      |      | 请求状态码              |
 
 **索引**
 
