docs：增加登陆日志表文档

--- a/docs/权限管理数据库设计文档.md
+++ b/docs/权限管理数据库设计文档.md
@@ -161,12 +161,30 @@ https://www.bilibili.com/video/av75498379
 | 字段    | 类型         | 空   | 默认 | 注释                    |
 | ------- | ------------ | ---- | ---- | ----------------------- |
 | id      | bigint(20)   | 否   |      | ID                      |
-| ip      | varchar(255) |      |      |                         |
-| user_id | bigint(20)   |      |      |                         |
+| ip      | varchar(255) |      |      | ip                      |
+| user_id | bigint(20)   |      |      | 请求用户的用户id        |
 | params  | varchar(255) |      |      | 参数                    |
 | action  | varchar(100) |      |      | 行为                    |
 | method  | varchar(15)  |      |      | 请求方式，同http method |
 | status  | int          |      |      | 请求状态码              |
+
+**索引**
+
+| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数 | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
+
+## sys_login_log
+
+**表注释：登录日志表**
+
+| 字段    | 类型         | 空   | 默认 | 注释         |
+| ------- | ------------ | ---- | ---- | ------------ |
+| id      | bigint(20)   | 否   |      | ID           |
+| user_id | bigint(20)   |      |      | 登录的用户id |
+| ip      | varchar(255) |      |      | 登录ip       |
+| time    | datetime     |      |      | 登陆时间     |
+| ua      | varchar(500) |      |      | user-agent   |
 
 **索引**
 
