--- a/docs/权限管理数据库设计文档.md
+++ b/docs/权限管理数据库设计文档.md
@@ -158,15 +158,16 @@ https://www.bilibili.com/video/av75498379
 
 **表注释：请求追踪日志表**
 
-| 字段    | 类型         | 空   | 默认 | 注释                    |
-| ------- | ------------ | ---- | ---- | ----------------------- |
-| id      | bigint(20)   | 否   |      | ID                      |
-| ip      | varchar(255) |      |      | ip                      |
-| user_id | bigint(20)   |      |      | 请求用户的用户id        |
-| params  | varchar(255) |      |      | 参数                    |
-| action  | varchar(100) |      |      | 行为                    |
-| method  | varchar(15)  |      |      | 请求方式，同http method |
-| status  | int          |      |      | 请求状态码              |
+| 字段         | 类型         | 空   | 默认 | 注释                    |
+| ------------ | ------------ | ---- | ---- | ----------------------- |
+| id           | bigint(20)   | 否   |      | ID                      |
+| ip           | varchar(255) |      |      | ip                      |
+| user_id      | bigint(20)   |      |      | 请求用户的用户id        |
+| params       | varchar(255) |      |      | 参数                    |
+| action       | varchar(100) |      |      | 行为                    |
+| method       | varchar(15)  |      |      | 请求方式，同http method |
+| status       | int          |      |      | 请求状态码              |
+| consume_time | int          |      | 0    | 响应时间                |
 
 **索引**
 
