docs：增加系统任务表及任务日志表

--- a/docs/权限管理数据库设计文档.md
+++ b/docs/权限管理数据库设计文档.md
@@ -4,8 +4,6 @@
 | :--------- | :----- | :--- | :----- |
 | 2020-08-21 | v1.0.0 | 创建 | 杨长源 |
 
-
-
 # 参考文献
 
 https://blog.csdn.net/gglinux/article/details/68948901
@@ -15,8 +13,6 @@ https://www.zybuluo.com/stonezhou/note/1292262
 http://www.csdeshang.com/home/dsmall/database.html
 
 https://www.bilibili.com/video/av75498379
-
-# 
 
 # 数据模型实体属性
 
@@ -186,6 +182,48 @@ https://www.bilibili.com/video/av75498379
 | ip      | varchar(255) |      |      | 登录ip       |
 | time    | datetime     |      |      | 登陆时间     |
 | ua      | varchar(500) |      |      | user-agent   |
+
+**索引**
+
+| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数 | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
+
+## sys_task
+
+**表注释：系统任务表**
+
+| 字段       | 类型         | 空   | 默认 | 注释                                  |
+| ---------- | ------------ | ---- | ---- | ------------------------------------- |
+| id         | bigint(20)   | 否   |      | ID                                    |
+| name       | varchar(50)  | 否   |      | 任务名称                              |
+| service    | varchar(255) | 否   |      | 需要执行的service                     |
+| type       | tinyint(4)   | 否   | 0    | 任务模式：0为cron，1为时间间隔        |
+| start_time | datetime     |      |      | 任务开始时间                          |
+| end_time   | datetime     |      |      | 任务结束时间                          |
+| limit      | int          |      | 0    | 最大执行次数，小于或者等于0则不限次数 |
+| cron       | varchar(255) |      |      | cron表达式，type为0时生效             |
+| every      | int          |      |      | 执行间隔，type为1时生效               |
+| data       | varchar(500) |      |      | 传入数据                              |
+| remark     | varchar(255) |      |      | 备注                                  |
+
+**索引**
+
+| 键名    | 类型  | 唯一 | 紧凑 | 字段 | 基数 | 排序规则 | 空   | 注释 |
+| ------- | ----- | ---- | ---- | ---- | ---- | -------- | ---- | ---- |
+| PRIMARY | BTREE | 是   | 否   | id   | 0    | A        | 否   |      |
+| UNIQUE  | BTREE | 是   | 否   | name |      | A        | 否   |      |
+
+## sys_task_log
+
+**表注释：任务日志表**
+
+| 字段    | 类型       | 空   | 默认 | 注释                       |
+| ------- | ---------- | ---- | ---- | -------------------------- |
+| id      | bigint(20) | 否   |      | id                         |
+| task_id | bigint(20) | 否   |      | 对应任务id                 |
+| status  | Tinyint(4) | 否   | 0    | 任务状态：0为失败，1为成功 |
+| detail  | Text       |      |      | 任务详情                   |
 
 **索引**
 
