--- a/docs/权限管理数据库设计文档.md
+++ b/docs/权限管理数据库设计文档.md
@@ -205,7 +205,8 @@ https://www.bilibili.com/video/av75498379
 | limit      | int          |      | 0    | 最大执行次数，小于或者等于0则不限次数 |
 | cron       | varchar(255) |      |      | cron表达式，type为0时生效             |
 | every      | int          |      |      | 执行间隔，type为1时生效               |
-| data       | varchar(500) |      |      | 传入数据                              |
+| data       | text         |      |      | 传入数据                              |
+| job_opts   | text         |      |      | bull job options                      |
 | remark     | varchar(255) |      |      | 备注                                  |
 
 **索引**
