--- a/docs/权限管理数据库设计文档.md
+++ b/docs/权限管理数据库设计文档.md
@@ -193,21 +193,21 @@ https://www.bilibili.com/video/av75498379
 
 **表注释：系统任务表**
 
-| 字段       | 类型         | 空   | 默认 | 注释                                  |
-| ---------- | ------------ | ---- | ---- | ------------------------------------- |
-| id         | bigint(20)   | 否   |      | ID                                    |
-| name       | varchar(50)  | 否   |      | 任务名称                              |
-| service    | varchar(255) | 否   |      | 需要执行的service                     |
-| type       | tinyint(4)   | 否   | 0    | 任务模式：0为cron，1为时间间隔        |
-| status     | tinyint(1)   |      | 0    | 任务状态：0为暂停，1为运行            |
-| start_time | datetime     |      |      | 任务开始时间，type为0时生效           |
-| end_time   | datetime     |      |      | 任务结束时间，type为0时生效           |
-| limit      | int          |      | 0    | 最大执行次数，小于或者等于0则不限次数 |
-| cron       | varchar(255) |      |      | cron表达式，type为0时生效             |
-| every      | int          |      |      | 执行间隔，type为1时生效               |
-| data       | text         |      |      | 传入数据                              |
-| job_opts   | text         |      |      | bull job options                      |
-| remark     | varchar(255) |      |      | 备注                                  |
+| 字段       | 类型         | 空   | 默认 | 注释                                            |
+| ---------- | ------------ | ---- | ---- | ----------------------------------------------- |
+| id         | bigint(20)   | 否   |      | ID                                              |
+| name       | varchar(50)  | 否   |      | 任务名称                                        |
+| service    | varchar(255) | 否   |      | 需要执行的service                               |
+| type       | tinyint(4)   | 否   | 0    | 任务模式：0为cron，1为时间间隔                  |
+| status     | tinyint(1)   |      | 0    | 任务状态：0为暂停，1为运行，2为结束（执行完毕） |
+| start_time | datetime     |      |      | 任务开始时间，type为0时生效                     |
+| end_time   | datetime     |      |      | 任务结束时间，type为0时生效                     |
+| limit      | int          |      | 0    | 最大执行次数，小于或者等于0则不限次数           |
+| cron       | varchar(255) |      |      | cron表达式，type为0时生效                       |
+| every      | int          |      |      | 执行间隔，type为1时生效                         |
+| data       | text         |      |      | 传入数据                                        |
+| job_opts   | text         |      |      | bull job options                                |
+| remark     | varchar(255) |      |      | 备注                                            |
 
 **索引**
 
