--- a/docs/权限管理数据库设计文档.md
+++ b/docs/权限管理数据库设计文档.md
@@ -22,8 +22,8 @@ https://www.bilibili.com/video/av75498379
 
 | 字段      | 类型         | 空   | 默认 | 注释                            |
 | --------- | ------------ | ---- | ---- | ------------------------------- |
-| id        | bigint(20)   | 否   |      | ID                              |
-| parent_id | bigint(20)   |      |      | 父菜单ID                        |
+| id        | int(20)      | 否   |      | ID                              |
+| parent_id | int(20)      |      |      | 父菜单ID                        |
 | name      | varchar(255) | 否   |      | 菜单名称                        |
 | router    | varchar(255) |      |      | 菜单地址                        |
 | perms     | varchar(255) |      |      | 权限标识                        |
@@ -46,8 +46,8 @@ https://www.bilibili.com/video/av75498379
 
 | 字段      | 类型         | 空   | 默认 | 注释       |
 | --------- | ------------ | ---- | ---- | ---------- |
-| id        | bigint(20)   | 否   |      | ID         |
-| parent_id | bigint(20)   |      |      | 上级部门ID |
+| id        | int(20)      | 否   |      | ID         |
+| parent_id | int(20)      |      |      | 上级部门ID |
 | name      | varchar(255) | 否   |      | 部门名称   |
 | order_num | int(11)      |      | 0    | 排序       |
 
@@ -63,8 +63,8 @@ https://www.bilibili.com/video/av75498379
 
 | 字段          | 类型         | 空   | 默认 | 注释                   |
 | ------------- | ------------ | ---- | ---- | ---------------------- |
-| id            | bigint(20)   | 否   |      | ID                     |
-| department_id | bigint(20)   | 否   |      | 部门编号               |
+| id            | int(20)      | 否   |      | ID                     |
+| department_id | int(20)      | 否   |      | 部门编号               |
 | name          | varchar(255) | 否   |      | 姓名                   |
 | username      | varchar(255) | 否   |      | 登录账号               |
 | password      | varchar(255) | 否   |      | 密码                   |
@@ -88,7 +88,7 @@ https://www.bilibili.com/video/av75498379
 
 | 字段    | 类型         | 空   | 默认 | 注释   |
 | ------- | ------------ | ---- | ---- | ------ |
-| id      | bigint(20)   | 否   |      | ID     |
+| id      | int(20)      | 否   |      | ID     |
 | user_id | varchar(255) | 否   |      | 创建人 |
 | name    | varchar(255) | 否   |      | 名称   |
 | label   | varchar(50)  | 否   |      | 标签   |
@@ -106,11 +106,11 @@ https://www.bilibili.com/video/av75498379
 
 **表注释：系统角色部门关系**
 
-| 字段          | 类型       | 空   | 默认 | 注释   |
-| ------------- | ---------- | ---- | ---- | ------ |
-| id            | bigint(20) | 否   |      | ID     |
-| role_id       | bigint(20) | 否   |      | 角色ID |
-| department_id | bigint(20) | 否   |      | 部门ID |
+| 字段          | 类型    | 空   | 默认 | 注释   |
+| ------------- | ------- | ---- | ---- | ------ |
+| id            | int(20) | 否   |      | ID     |
+| role_id       | int(20) | 否   |      | 角色ID |
+| department_id | int(20) | 否   |      | 部门ID |
 
 **索引**
 
@@ -122,11 +122,11 @@ https://www.bilibili.com/video/av75498379
 
 **表注释：系统角色菜单关系**
 
-| 字段    | 类型       | 空   | 默认 | 注释   |
-| ------- | ---------- | ---- | ---- | ------ |
-| id      | bigint(20) | 否   |      | ID     |
-| role_id | bigint(20) | 否   |      | 角色ID |
-| menu_id | bigint(20) | 否   |      | 菜单ID |
+| 字段    | 类型    | 空   | 默认 | 注释   |
+| ------- | ------- | ---- | ---- | ------ |
+| id      | int(20) | 否   |      | ID     |
+| role_id | int(20) | 否   |      | 角色ID |
+| menu_id | int(20) | 否   |      | 菜单ID |
 
 **索引**
 
@@ -138,11 +138,11 @@ https://www.bilibili.com/video/av75498379
 
 **表注释：系统用户角色关系**
 
-| 字段    | 类型       | 空   | 默认 | 注释   |
-| ------- | ---------- | ---- | ---- | ------ |
-| id      | bigint(20) | 否   |      | ID     |
-| user_id | bigint(20) | 否   |      | 用户ID |
-| role_id | bigint(20) | 否   |      | 角色ID |
+| 字段    | 类型    | 空   | 默认 | 注释   |
+| ------- | ------- | ---- | ---- | ------ |
+| id      | int(20) | 否   |      | ID     |
+| user_id | int(20) | 否   |      | 用户ID |
+| role_id | int(20) | 否   |      | 角色ID |
 
 **索引**
 
@@ -156,9 +156,9 @@ https://www.bilibili.com/video/av75498379
 
 | 字段         | 类型         | 空   | 默认 | 注释                    |
 | ------------ | ------------ | ---- | ---- | ----------------------- |
-| id           | bigint(20)   | 否   |      | ID                      |
+| id           | int(20)      | 否   |      | ID                      |
 | ip           | varchar(255) |      |      | ip                      |
-| user_id      | bigint(20)   |      |      | 请求用户的用户id        |
+| user_id      | int(20)      |      |      | 请求用户的用户id        |
 | params       | varchar(255) |      |      | 参数                    |
 | action       | varchar(100) |      |      | 行为                    |
 | method       | varchar(15)  |      |      | 请求方式，同http method |
@@ -177,8 +177,8 @@ https://www.bilibili.com/video/av75498379
 
 | 字段    | 类型         | 空   | 默认 | 注释         |
 | ------- | ------------ | ---- | ---- | ------------ |
-| id      | bigint(20)   | 否   |      | ID           |
-| user_id | bigint(20)   |      |      | 登录的用户id |
+| id      | int(20)      | 否   |      | ID           |
+| user_id | int(20)      |      |      | 登录的用户id |
 | ip      | varchar(255) |      |      | 登录ip       |
 | time    | datetime     |      |      | 登陆时间     |
 | ua      | varchar(500) |      |      | user-agent   |
@@ -195,7 +195,7 @@ https://www.bilibili.com/video/av75498379
 
 | 字段       | 类型         | 空   | 默认 | 注释                                            |
 | ---------- | ------------ | ---- | ---- | ----------------------------------------------- |
-| id         | bigint(20)   | 否   |      | ID                                              |
+| id         | int(20)      | 否   |      | ID                                              |
 | name       | varchar(50)  | 否   |      | 任务名称                                        |
 | service    | varchar(255) | 否   |      | 需要执行的service                               |
 | type       | tinyint(4)   | 否   | 0    | 任务模式：0为cron，1为时间间隔                  |
@@ -220,12 +220,12 @@ https://www.bilibili.com/video/av75498379
 
 **表注释：任务日志表**
 
-| 字段    | 类型       | 空   | 默认 | 注释                       |
-| ------- | ---------- | ---- | ---- | -------------------------- |
-| id      | bigint(20) | 否   |      | id                         |
-| task_id | bigint(20) | 否   |      | 对应任务id                 |
-| status  | Tinyint(4) | 否   | 0    | 任务状态：0为失败，1为成功 |
-| detail  | Text       |      |      | 任务详情                   |
+| 字段    | 类型       | 空   | 默认 | 注释                                  |
+| ------- | ---------- | ---- | ---- | ------------------------------------- |
+| id      | int(20)    | 否   |      | id                                    |
+| task_id | int(20)    | 否   |      | 对应任务id                            |
+| status  | Tinyint(4) | 否   | 0    | 任务状态：0为执行中，1为成功，2为失败 |
+| detail  | Text       |      |      | 任务详情                              |
 
 **索引**
 
@@ -239,7 +239,7 @@ https://www.bilibili.com/video/av75498379
 
 | 字段 | 类型        | 空   | 默认 | 注释     |
 | ---- | ----------- | ---- | ---- | -------- |
-| id   | bigint(20)  | 否   |      | ID       |
+| id   | int(20)     | 否   |      | ID       |
 | name | varchar(50) | 否   |      | 类别名称 |
 
 **索引**
@@ -255,9 +255,9 @@ https://www.bilibili.com/video/av75498379
 
 | 字段    | 类型         | 空   | 默认 | 注释             |
 | ------- | ------------ | ---- | ---- | ---------------- |
-| id      | bigint(20)   | 否   |      | ID               |
+| id      | int(20)      | 否   |      | ID               |
 | url     | varchar(500) | 否   |      | 图片对应地址     |
-| type_id | bigint(20)   | 否   |      | 对应图片类别ID   |
+| type_id | int(20)      | 否   |      | 对应图片类别ID   |
 | extra   | varchar(255) |      |      | 图片附加信息信息 |
 
 **索引**
