--- a/docs/权限管理数据库设计文档.md
+++ b/docs/权限管理数据库设计文档.md
@@ -175,13 +175,13 @@ https://www.bilibili.com/video/av75498379
 
 **表注释：登录日志表**
 
-| 字段    | 类型         | 空   | 默认 | 注释         |
-| ------- | ------------ | ---- | ---- | ------------ |
-| id      | int(20)      | 否   |      | ID           |
-| user_id | int(20)      |      |      | 登录的用户id |
-| ip      | varchar(255) |      |      | 登录ip       |
-| time    | datetime     |      |      | 登陆时间     |
-| ua      | varchar(500) |      |      | user-agent   |
+| 字段    | 类型         | 空   | 默认 | 注释                         |
+| ------- | ------------ | ---- | ---- | ---------------------------- |
+| id      | int(20)      | 否   |      | ID                           |
+| user_id | int(20)      |      |      | 登录的用户id                 |
+| ip      | varchar(255) |      |      | 登录ip                       |
+| time    | datetime     |      |      | 登陆时间（未使用，保留字段） |
+| ua      | varchar(500) |      |      | user-agent                   |
 
 **索引**
 
