--- a/docs/权限管理数据库设计文档.md
+++ b/docs/权限管理数据库设计文档.md
@@ -199,7 +199,7 @@ https://www.bilibili.com/video/av75498379
 | name       | varchar(50)  | 否   |      | 任务名称                                        |
 | service    | varchar(255) | 否   |      | 需要执行的service                               |
 | type       | tinyint(4)   | 否   | 0    | 任务模式：0为cron，1为时间间隔                  |
-| status     | tinyint(1)   |      | 0    | 任务状态：0为暂停，1为运行，2为结束（执行完毕） |
+| status     | tinyint(1)   |      | 0    | 任务状态：0为停止，1为运行，2为结束（执行完毕） |
 | start_time | datetime     |      |      | 任务开始时间，type为0时生效                     |
 | end_time   | datetime     |      |      | 任务结束时间，type为0时生效                     |
 | limit      | int          |      | 0    | 最大执行次数，小于或者等于0则不限次数           |
